Feature/spline 1417 java21 (#1418)
* (noissue) + .sdkmanrc

* spline #1417 Upgrade to Java 21 LTS

* spline #1417 update JaCoCo workflow to support Java 21.

* spline #1417 exclude `.sdkmanrc` from a licence check

* spline #1417 fix Jacoco

* spline #1417 update Root POM version to 1.0.13

* spline #1417 Jacoco :: return back explicit listing of the XML files as apparently the '**' doesn't work.

* spline #1417 increment root POM version to 1.0.14